service.yml
kind: Service
apiVersion: v1
metadata:
  name: robofriends-docker-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30008
  selector:
    app: robofriends-docker
